# anq_scaff

./: README.md  __init__.py  cli.py  generator.py  module_generator.py  pyproject.toml  setup.py  template_engine.py  使用指南.md
templates/: Dockerfile  README.md  api_dependencies.py  api_init.py  api_module.py  cache_manager.py  conftest.py  docker_compose.yaml  env_example  exception_system.py  initializer_cache.py  initializer_init_with_cache.py  initializer_log.py  lifespan_manager.py  logging_fastcrud.py  main.py  middleware_cors.py  middleware_exceptions.py  model_module.py  models_init.py  pydantic_settings_config.py  pyproject.toml  requirements.txt  schema_module.py  schemas_init.py  service_module.py  test_example.py  unified_router.py  utils_jwt.py  uv_install_guide.md
