[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anq-scaff"
version = "1.0.0"
description = "企业级FastAPI项目脚手架生成工具"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["fastapi", "scaffold", "generator", "template", "enterprise"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastapi>=0.100.0",
    "jinja2>=3.0.0",
]

[project.scripts]
anq-scaff = "anq_scaff.cli:main"

[tool.setuptools]
# 扁平结构：setup.py 和包代码在同一目录
packages = ["anq_scaff"]
package-dir = {"anq_scaff" = "."}
include-package-data = true

[tool.setuptools.package-data]
anq_scaff = [
    "templates/*.py",
    "templates/*.txt",
    "templates/*.md",
    "templates/*.js",
    "templates/*.json",
    "templates/*.yaml",
    "templates/*.ini",
    "templates/*",
]

